// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip should render an arrow when requested 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
}

.c1 {
  display: inline-block;
  border-radius: 50px;
  padding: 0.5rem 1rem;
  font-size: 0.85rem;
  color: #f6f6f6;
  background-color: #666;
}

.c2 {
  display: inline-block;
  width: 24px;
  height: 24px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  background-image: url(test-file-stub);
}

<li
  class="c0"
>
  <div
    class="c1"
  >
    Example content
  </div>
  <div
    class="c2"
  />
</li>
`;

exports[`Chip should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.5rem;
}

.c1 {
  display: inline-block;
  border-radius: 50px;
  padding: 0.5rem 1rem;
  font-size: 0.85rem;
  color: #f6f6f6;
  background-color: #666;
}

<li
  class="c0"
>
  <div
    class="c1"
  >
    Example content
  </div>
</li>
`;
